<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="AxisControl" Id="{07f0d91d-99a7-4d94-ba45-f0716edb872f}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA' := '1'}
TYPE AxisControl :
STRUCT
	bExecute			:	BOOL;
	bReset				:	BOOL;
	eCommand			:	McCommand;
	
	bEnable				: 	BOOL;
	bFwEnabled			:	BOOL;	//READBACK
	bBwEnabled			:	BOOL;	//READBACK

	fOverride			:	LREAL;
	fVelocity			:	LREAL;
	fAcceleration		:	LREAL;
	fDeceleration		:	LREAL;
	fDistance			:	LREAL;
	fPosition			:	LREAL;
	
	bJogForward			:	BOOL;
	bJogBackward		:	BOOL;
	
	fGearRatioNum		:	LREAL;
	iGearRatioDen		:	UINT;
	fGearRatio1			:	LREAL;
	fGearRatio2			:	LREAL;
	fGearRatio3			:	LREAL;
	fGearRatio4			:	LREAL;
	fParametersIn		:	ARRAY [1..17] OF REAL;
	iParameterIndex		:	INT;
	fParameterValue		:	LREAL;
	bInput				:	BOOL;	//USED FOR ENABLING AND DISABLING FEATURES
	
	//MISC
	sAxisName			:	STRING;
	sAxisDesc			:	STRING;
	
	//OUTPUTS
	bAxisReady			:	BOOL;
	bError				:	BOOL;
	iErrorID			:	UDINT;
	bReady				:	BOOL;
	bBusy				:	BOOL;
	bMoving				:	BOOL;
	bLatchedDone		:	BOOL;
	bDone				:	BOOL;
	blatchedError		:	BOOL;
	iAxisState			:	UINT;
	fParametersOut		:	ARRAY [1..17] OF LREAL;
	bSoftLimPosEn		:	BOOL;
	bSoftLimNegEn		:	BOOL;
	bPosLagEn			:	BOOL;
	
	
	buffer				:	MC_BufferMode;	
	//Homing
	fHomeVelocity		:	LREAL:=1;	//init for testing purposes
	fHomeTorque			:	LREAL;
	fHomePosition		:	LREAL;
	fHomeDistance		:	LREAL;
	tHomeTimeLimit		:	TIME:=T#60S;	//init for testing purposes
	fHomeDistanceLimit	:	LREAL:=2000;	//init for testing purposes
	MCHomeDirection		:	MC_Home_Direction:=	mcSwitchPositive;	//init for testing purposes
	MCSwitchMode			:	MC_Switch_Mode:= mcRisingEdge;		//init for testing purposes
	MCSignalRef			:	MC_Ref_Signal_Ref;	//In structure for testing purposes so I can simulate level of signal without hardware
	
	{attribute 'OPC.UA.DA' := '0'}
	Axis				:	AXIS_REF;
	{attribute 'OPC.UA.DA' := '0'}
	masterAxis			:	UINT:=1;
	{attribute 'OPC.UA.DA' := '0'}
	masterAxis1			:	UINT:=1;
	{attribute 'OPC.UA.DA' := '0'}
	masterAxis2			:	UINT:=1;
	{attribute 'OPC.UA.DA' := '0'}
	masterAxis3			:	UINT:=1;
	{attribute 'OPC.UA.DA' := '0'}
	masterAxis4			:	UINT:=1;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>