<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="McCommand" Id="{bef8e4cd-5cf5-484c-bcaa-1cbb0d667fba}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE McCommand :
(
	Reset				:= 1,
	Power				:= 2,
	ReadStatus			:= 3,
	ReadAxisError		:= 4,
	ReadParameter		:= 5,
	ReadBoolParameter	:= 6,
	WriteParameter		:= 7,
	WriteBoolParameter	:= 8,
	
	RESERVED1			:= 9,
	RESERVED2			:= 10,
	RESERVED3			:= 11,
	
	ReadActualPosition	:= 12,
	ReadActualVelocity	:= 13,
	
	RESERVED4			:= 14,
	RESERVED5			:= 15,
	RESERVED6			:= 16,
	
	SetPosition			:= 17,
	SetOverride			:= 18,
	TouchProbe			:= 19,
	
	RESERVED7			:= 20,
	
	AbortTrigger		:= 21,
	AbortSuperposition	:= 22,
	CamTableSelect		:= 23,
	
	
	
	Home				:= 24,
	Jog					:= 25,
	Stop				:= 26,
	Halt				:= 27,
	MoveAbsolute		:= 28,
	MoveRelative		:= 29,
	MoveAdditive		:= 30,
	MoveSuperimposed	:= 31,
	MoveVelocity		:= 32,
	MoveContinuousAbs	:= 33,
	MoveContinuousRel	:= 34,
	MoveModulo			:= 35,
	
	RESERVED8			:= 36,
	RESERVED9			:= 37,
	RESERVED10			:= 38,
	RESERVED11			:= 39,
	
	GearIn				:= 40,
	GearInDyn			:= 41,
	GearInMultiMaster	:= 42,
	GearOut				:= 43,
	HaltPhasing			:= 44,
	PhasingAbsolute		:= 45,
	PhasingRelative		:= 46,
	CamIn				:= 47,
	CamOut				:= 48,
	CamScaling			:= 49,
	CamAdd				:= 50,
	CamExchange			:= 51,
	CamInV2				:= 52,
	CamRemove			:= 53,
	CamScalingV2		:= 54
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>