<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL" Id="{c8d3e9d5-31b6-4526-9dc0-e43961309b0c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	iAxis		:	UINT; //Indexing variable for exposing which axis currently being run though drive function block
	axes			:	ARRAY [1..GVL.axisNumMax] OF ST_AxisControl;		(*~ (OPC: 1 : available for OPC-clients) 
	    																		(OPC_PROP[0005]: 3 : OPC_PROP_RIGHTS, here read/write) *)
//HMI Parameters	-	These can hopefully be removed on upgrading to the new HMI tool
	SwLimitPos	:	LREAL;
	SwLimitNeg	:	LREAL;
	MaxPositionLag	:	LREAL;
	MaxVelocityAppl	:	LREAL;
	MaxAccelerationAppl	:	LREAL;
	MaxDecelerationAppl	:	LREAL;
	MaxJerkAppl			:	LREAL;
	
END_VAR
VAR_GLOBAL CONSTANT
	axisNumMax	:	UINT:=8;
	axisCoupleMax	:	UINT:=4;
END_VAR

]]></Declaration>
  </GVL>
</TcPlcObject>